# seedance2_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py  streamlit_app.py
docs/: MCP工具清单.md
src/seedance_mcp/: client.py  config.py  downloads.py  errors.py  schemas.py  server.py  ui_support.py  validators.py
src/seedance_mcp/tools/: __init__.py  video.py
tests/: test_server.py  test_service.py  test_ui_support.py  test_validators.py
